--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,7 @@ theme = "hugo-bare-min-theme"
   [[module.imports]]
     disabled = true
 
+[Params.source]
+url = "https://Aimeedeer/org-notes"   # Needed if you want to see .GitInfo for a page
+md_dir = "content"                   # Needed if you want to get a link to Markdown source for each page
+org_dir = ""      
