--- a/themes/hugo-bare-min-theme/config.toml
+++ b/themes/hugo-bare-min-theme/config.toml
@@ -1,1 +1,7 @@
 theme = ["hugo-debugprint", "hugo-search-fuse-js", "hugo-bare-min-theme"]
+
+[module]
+  [[module.imports]]
+    path = "hugo-debugprint"
+    disabled = true
+    disable_debug = true
