--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Aimee's Study Notes"
 theme = "hugo-bare-min-theme"
 
-googleAnalytics = "G-K752PTP4WJ"
+googleAnalytics = "G-YNDWJW2DWV"
 
 enableEmoji = true
 enableGitInfo = true
