--- a/config.toml
+++ b/config.toml
@@ -3,11 +3,11 @@ languageCode = "en-us"
 title = "Aimee's Study Notes"
 theme = "hugo-bare-min-theme"
 
-googleAnalytics = "G-YNDWJW2DWV"
 
 enableEmoji = true
 enableGitInfo = true
 pygmentsUseClasses = true
+pygmentsCodeFences = true       # This applies to Chroma too.
 
 [Params]
 description = "Aimee's Study Notes"
